[package]
name = "simple-hashquine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
sha2 = "0.10.7"
num_cpus = "1.16.0"
wasm-bindgen = "0.2"
crossbeam = "0.8.2"
